<resources>
    <string name="app_name">LocationReminderApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to the location reminder app</string>
    <string name="fragment_description">the main fragment in main activity which will display the fragments</string>
    <string name="login_string">LOGIN</string>
    <string name="home_title">Location Reminders</string>
    <string name="signIn_with_email">Sign in with email</string>
    <string name="signIn_with_google">Sign in with Google</string>
    <string name="map_description">it is an image of a map</string>
    <string name="no_account_registered">You do not have an account, please sign up first</string>
    <string name="title_activity_reminders">RemindersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="floating_action_button_description">Button to add new reminder</string>
    <string name="no_data">No Data</string>
    <string name="no_data_image_description">image shows that no upcoming reminders </string>
    <string name="recycler_view_description">here is the list of reminders you have</string>
    <string name="reminder_title_hint">Reminder Title</string>
    <string name="reminder_description_hint">Description</string>
    <string name="menu_item">Logout</string>
    <string name="notification_channel_id" translatable="false">reminder_channel</string>
    <string name="notification_channel_name" translatable="true">Reminder</string>
    <string name="normal_map">Normal Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="save_button">Save</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use reminder app</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled for this app.</string>
    <string name="data_fields_empty">Please fill all the data</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="error_save_fab">Please fill all the data</string>
    <string name="reminder_is_added">Reminder added</string>
</resources>